--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "input.js",
   "scripts": {
-    "serve": "live-server public",
-    "build": "babel src/index.js -o public/scripts/bundle.js --presets env --watch"
+    "dev-server": "webpack-dev-server --mode development",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
